# data-competition

./: .gitignore  README.md  docker-compose.yml
236355/: README.md  pyproject.toml
236381/: pyproject.toml
236381/notebooks/: baseline.ipynb  eda.ipynb
be/: pyproject.toml
be/app/: main.py
dacon/236450/: baseline.ipynb  baseline.py  experiment.sh  experiment_250212.sh  main.py  pyproject.toml  run.sh  run_experiments.sh  test.ipynb
dacon/236450/config/: config.yaml
dacon/236450/src/datas/: data_loader.py
dacon/236450/src/features/: feature_engineering.py  features.py
docker/be/: Dockerfile
docker/etl/: Dockerfile.scheduler  Dockerfile.webserver  entrypoint.sh
docker/fe/: Dockerfile
etl/dags/: example_dag.py
fe/app/: app.py
ic50-prediction/: README.md  dataset.py  features.py  metrics.py  models.py  pyproject.toml  train.py  train_config.yaml  trainers.py  utils.py
ic50-prediction/eda/: baseline.ipynb  eda.ipynb  sqlite.ipynb  sqlite.py  xgboost.ipynb
sql/: init.sql
