[tool.poetry]
name = "ic50-prediction"
version = "0.1.0"
description = "project for 2nd new drug prediction competition in DACON platform"
authors = ["GangBean <xbox2537@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
