[tool.poetry]
name = "ic50-prediction"
version = "0.1.0"
description = "project for 2nd new drug prediction competition in DACON platform"
authors = ["GangBean <xbox2537@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^2.1.0"
rdkit = "^2024.3.5"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
torch = "^2.4.0"
torchvision = "^0.19.0"
certifi = "^2024.8.30"
tqdm = "^4.66.5"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
